--- a/package.json
+++ b/package.json
@@ -9,9 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/lodash": "^4.14.182",
+    "@types/spotify-web-api-node": "^5.0.7",
+    "autoprefixer": "^10.4.5",
+    "framer-motion": "^6.3.1",
+    "lodash": "^4.17.21",
     "next": "12.1.5",
+    "next-auth": "^4.0.0-beta.7",
+    "postcss": "^8.4.12",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-icons": "^4.3.1",
+    "recoil": "^0.7.2",
+    "spotify-web-api-node": "^5.0.2",
+    "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
     "@types/node": "17.0.25",
